--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="LE Crown Interior Design - Inspiring Spaces Coming Soon" />
+  <meta name="author" content="LE Crown Interior Design" />
+  <meta name="keywords" content="interior design, luxury, coming soon, website, inspiring spaces" />
+  <meta property="og:title" content="LE Crown Interior Design" />
+  <meta property="og:description" content="Inspiring interior design spaces, launching soon!" />
+  <meta property="og:image" content="/assets/og-image.jpg" />
+  <meta property="og:url" content="https://lecrown.com" />
+  <meta name="twitter:title" content="LE Crown Interior Design" />
+  <meta name="twitter:description" content="Inspiring interior design spaces, launching soon!" />
+  <meta name="twitter:image" content="/assets/og-image.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <title>LE Crown Interior Design | Coming Soon</title>
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="/path/to/your/styles.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
