--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:description" content="Inspiring interior design spaces, launching soon!" />
   <meta name="twitter:image" content="/assets/og-image.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
-  <title>LE Crown Interior Design | Coming Soon</title>
+  <title>Crown Interiors | Coming Soon</title>
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/path/to/your/styles.css" />
 </head>
