--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="LE Crown Interior Design - Inspiring Spaces Coming Soon" />
-  <meta name="author" content="LE Crown Interior Design" />
-  <meta name="keywords" content="interior design, luxury, coming soon, website, inspiring spaces" />
-  <meta property="og:title" content="LE Crown Interior Design" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="description" content="Crown Interiors - Inspiring Spaces Coming Soon" />
+  <meta name="author" content="Crown Interiors" />
+  <meta name="keywords" content="interior design,luxury,coming soon,website,inspiring spaces" />
+  <meta property="og:title" content="Crown Interiors" />
   <meta property="og:description" content="Inspiring interior design spaces, launching soon!" />
-  <meta property="og:image" content="/assets/og-image.jpg" />
-  <meta property="og:url" content="https://lecrown.com" />
-  <meta name="twitter:title" content="LE Crown Interior Design" />
+  <meta property="og:image" content="/assets/logo.png" />
+  <meta property="og:url" content="https://le-crowninteriors.com" />
+  <meta name="twitter:title" content="Crown Interiors" />
   <meta name="twitter:description" content="Inspiring interior design spaces, launching soon!" />
-  <meta name="twitter:image" content="/assets/og-image.jpg" />
+  <meta name="twitter:image" content="/assets/logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <title>Crown Interiors | Coming Soon</title>
-  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="/path/to/your/styles.css" />
+
 </head>
 
 <body>
